trunk/Archive2/e5/5a189740bda750/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:23:27: error: type 'HORange' does not provide a subscript operator
        out[numSorted] = a[i];
                         ~^~
main.cpp:28:27: error: type 'HORange' does not provide a subscript operator
        out[numSorted] = b[j];
                         ~^~
main.cpp:51:9: error: array type 'int [7]' is not assignable
    arr = {1,2,3,2,6,3,1};
    ~~~ ^
3 errors generated.
